style.css
/* ... */
#gettingStarted .startingCards > div {
    width: 550px;
    padding: 35px;
    color: #444;
    text-align: left;
    height: 380px;
    margin-bottom: 1px;
}

#gettingStarted .startingCards > div .title {
    
    font-size: 26px;
    font-weight: 700;
    text-transform: uppercase;
    position: relative;
    color: var(--themeOrange);
    padding-bottom: 12px;
}

#gettingStarted .startingCards > div p {
    font-size: 16px;
    padding-top: 8px;
    font-weight: bold;
    display: inline;
}

#gettingStarted .startingCards img {
    float: left;
    margin-right: 20px;
    width: 150px;
    height: 150px;
    margin-bottom: 60px; /* Added to keep text from moving to bottom of photo */
}

#gettingStarted .startingCards .stepTwo {
        padding-top: 180px;
}

#gettingStarted .startingCards .stepFour {
        padding-top: 180px;
        
}

/* servicesOffered Start */

#servicesOffered .serviceCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 2px;
    position: relative;
    height: 350px;
}

#servicesOffered .serviceCards > div {
    width: 350px;
    padding: 3px;
    color: #444;
    text-align: center;
    border-radius: 5px;
    height: 420px;
    margin-bottom: 100px;
    transition: 0.3s;
}

#servicesOffered .serviceCards > div .title {
    font-size: 18px;
    font-weight: 600;
    text-transform: uppercase;
    color: var(--themeOrange);
}

#servicesOffered .serviceCards > div p {
    font-size: 16px;
    margin-top: 15px;
}

#servicesOffered .serviceCards > div button {
    background-color: #000;
    color: #fff;
    outline: #000;
    padding: 7px 30px;
    margin-top: 15px;
    font-size: 16px;
    border-radius: 25px;
    cursor: pointer;
    transition: 0.3s;
}

#servicesOffered .serviceCards > div button:hover {
    background-color: var(--themeOrange);
    color: #fff;
    transition: 0.3s;
}

#servicesOffered .serviceCards > div .buttonToggle {
    display: none;
}

#servicesOffered .serviceCards img {
    width: 100px;
    height: 170px;
}

#servicesOffered .serviceCards .groomingService img {
    width: 115px;
    height: 170px;
}

/* servicesOffered End */

/* classesOffered Start */

#classesOffered .cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 50px;
    position: relative;
    height: 280px;
}

#classesOffered .cards > div {
    width: 350px;
    background-color: var(--gray);
    padding: 35px;
    color: #444;
    text-align: center;
    border-radius: 5px;
    height: 310px;
    border: 1px solid #ccc;
    transition: 0.4s;
    margin-bottom: 50px;
}

#classesOffered .cards > div:hover {
    width: 400px;
    margin-top: -20px;
    border-color: var(--themeOrange);
    padding: 55px;
    height: auto;
}

#classesOffered .cards > div .title {
    font-size: 18px;
    font-weight: 600;
    text-transform: uppercase;
}

#classesOffered .cards > div p {
    font-size: 14px;
    margin-top: 15px;
}

#classesOffered .cards > div button {
    border: 1px solid var(--themeOrange);
    outline: none;
    padding: 7px 15px;
    margin-top: 15px;
    font-size: 12px;
    border-radius: 3px;
    cursor: pointer;
    transition: 0.3s;
}

#classesOffered .cards > div:hover button {
    background-color: var(--themeOrange);
    color: #fff;
}

#classesOffered .cards img {
    width: 50px;
    height: 50px;
}

/* classesOffered end */

/* Testimonies Start */

#testimonies {
    margin-top: 750px;
    padding: 40px 0;
    background: #f1f1f1;
    color: #434343;
    text-align: center;
}

#testimonies .inner {
    max-width: 1200px;
    margin: auto;
    overflow: hidden;
    padding: 0 20px;
}

#testimonies .border {
    width: 160px;
    height: 5px;
    background: var(--themeOrange);
    margin: 26px auto;
}

#testimonies .row {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#testimonies .col {
    flex: 33.33%;
    max-width: 33.33%;
    box-sizing: border-box;
    padding: 15px;
}

#testimonies .testimonial {
    background: #fff;
    padding: 30px;
}

#testimonies .testimonial img {
    width: 100px;
    height: 100px;
    border-radius: 50px;
}

#testimonies .testimonial .name {
    font-size: 20px;
    text-transform: uppercase;
    margin: 20px 0;
}

#testimonies .testimonial .stars {
    color: var(--themeOrange);
    margin-bottom: 20px;
}

/* Footer Begins Here */

.bottomSection {
    padding-bottom: 0px;
}

.bottomSection a {
    text-decoration: none;
    transition: .5s;
    color: #fff;
}

.bottomSection ul, li {
    list-style-type: none;
}

footer {
    background-color: rgb(34, 34, 34);
    color: #fff;
}

.footer_info {
    width: 90%;
    margin: 0 auto;
    display: flex;
    padding: 50px 0;
}

.footer_info .footer_width {
    padding: 0 15px;
}

.footer_info h2 {
    margin-bottom: 20px;
    color: var(--themeOrange);
}

.about .contact {
    width: 40%;
}

.link {
    width: 20%;
}

.social-media {
    margin-top: 30px;
}

.social-media ul {
    display: flex;
}

.social-media ul li a {
    display: inline-block;
    margin-right: 50px;
    width: 50px;
    height: 50px;
    padding-top: 12px;
    background-color: transparent;
    border: 1px solid #fff;
    text-align: center;
}

.social-media ul li a:hover {
    background-color: var(--themeOrange);
    color: #000;
}

.link ul li a {
    display: block;
    margin-bottom: 15px;
    font-size: 18px;
}

.link ul li a:hover {
    color: var(--themeOrange);
}

.contact ul li {
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

.contact ul li span {
    margin-right: 15px;
}

.copy-right {
    padding: 15px 0;
    text-align: center;
    background-color: rgb(27, 27, 27);
}

.copy-right a {
    color: #fff;
    text-decoration: underline;
}
/* ... */

